--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# There are 168 models in totel.\n",
-    "# Explanations will take time. Thank you for waiting."
+    "# Currently there are 168 models in total.\n",
+    "# Explanations will take time. Thank you for patient."
    ]
   },
   {
@@ -59,7 +59,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3835,21 +3837,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
