--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Currently there are 168 models in total.\n",
+    "# Currently there are 168 models.\n",
     "# Explanations will take time. Thank you for patient."
    ]
   },
