Update markdown content and improve link formatting in core notebook

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,8 +24,224 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Currently there are 168 models.\n",
-    "# Explanations will take time. Thank you for patient."
+    "# Currently there are 168 models. Implementation will start from best models.\n",
+    "# Explanations will take time. Thank you for patient. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## TimesFM: A decoder-only foundation model for time-series forecasting \n",
+    "\n",
+    "17 Apr 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2310.10688)\n",
+    "\n",
+    "[Implementation Link](https://github.com/google-research/timesfm)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Chronos: Learning the Language of Time Series \n",
+    "\n",
+    "12 Mar 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2403.07815)\n",
+    "\n",
+    "[Implementation Link](https://github.com/amazon-science/chronos-forecasting)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## iTransformer: Inverted Transformers Are Effective for Time Series Forecasting \n",
+    "\n",
+    "14 Mar 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2310.06625)\n",
+    "\n",
+    "[Implementation Link](https://github.com/thuml/iTransformer)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## TimeMixer: Decomposable Multiscale Mixing for Time Series Forecasting \n",
+    "\n",
+    "23 May 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2405.14616)\n",
+    "\n",
+    "[Implementation Link](https://github.com/kwuking/TimeMixer)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Lag-Llama: Towards Foundation Models for Probabilistic Time Series Forecasting \n",
+    "\n",
+    "08 Feb 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2310.08278)\n",
+    "\n",
+    "[Implementation Link](https://github.com/time-series-foundation-models/lag-llama)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Unified Training of Universal Time Series Forecasting Transformers \n",
+    "\n",
+    "04 Feb 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2402.02592)\n",
+    "\n",
+    "[Implementation Link](https://github.com/SalesforceAIResearch/uni2ts)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## A Survey on Diffusion Models for Time Series and Spatio-Temporal Data \n",
+    "\n",
+    "11 Jun 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2404.18886)\n",
+    "\n",
+    "[Implementation Link](https://github.com/yyysjz1997/awesome-timeseries-spatiotemporal-diffusion-model)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## UniTS: Building a Unified Time Series Model \n",
+    "\n",
+    "29 Feb 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2403.00131)\n",
+    "\n",
+    "[Implementation Link](https://github.com/mims-harvard/UniTS)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Tiny Time Mixers (TTMs): Fast Pre-trained Models for Enhanced Zero/Few-Shot Forecasting of Multivariate Time Series \n",
+    "\n",
+    "09 Apr 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2401.03955)\n",
+    "\n",
+    "[Implementation Link](https://github.com/ibm-granite/granite-tsfm)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "#### Buraya kadar incele sonrasi date order\n",
+    "-----\n"
    ]
   },
   {
@@ -59,9 +275,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1351,29 +1565,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "## A Survey on Diffusion Models for Time Series and Spatio-Temporal Data \n",
-    "\n",
-    "11 Jun 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2404.18886)\n",
-    "\n",
-    "[Implementation Link](https://github.com/yyysjz1997/awesome-timeseries-spatiotemporal-diffusion-model)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "## Calibration of Time-Series Forecasting: Detecting and Adapting Context-Driven Distribution Shift \n",
     "\n",
     "11 Jun 2024 \n",
@@ -1607,29 +1798,6 @@
     "[Paper Link](https://arxiv.org/abs/2403.07300)\n",
     "\n",
     "[Implementation Link](https://github.com/Hank0626/CALF)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## TimeMixer: Decomposable Multiscale Mixing for Time Series Forecasting \n",
-    "\n",
-    "23 May 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2405.14616)\n",
-    "\n",
-    "[Implementation Link](https://github.com/kwuking/TimeMixer)\n",
     "\n",
     "---------------"
    ]
@@ -1935,57 +2103,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "## A decoder-only foundation model for time-series forecasting \n",
-    "\n",
-    "17 Apr 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2310.10688)\n",
-    "\n",
-    "[Implementation Link](https://github.com/google-research/timesfm)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "## Towards Transparent Time Series Forecasting \n",
     "\n",
     "15 Apr 2024\n",
     "\n",
     "[Paper Link](https://openreview.net/forum?id=TYXtXLYHpR)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Tiny Time Mixers (TTMs): Fast Pre-trained Models for Enhanced Zero/Few-Shot Forecasting of Multivariate Time Series \n",
-    "\n",
-    "09 Apr 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2401.03955)\n",
-    "\n",
-    "[Implementation Link](https://github.com/ibm-granite/granite-tsfm)\n",
     "\n",
     "---------------"
    ]
@@ -2295,29 +2417,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "## iTransformer: Inverted Transformers Are Effective for Time Series Forecasting \n",
-    "\n",
-    "14 Mar 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2310.06625)\n",
-    "\n",
-    "[Implementation Link](https://github.com/thuml/iTransformer)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "## Self-Supervised Learning for Time Series: Contrastive or Generative? \n",
     "\n",
     "14 Mar 2024 \n",
@@ -2371,29 +2470,6 @@
     "[Paper Link](https://arxiv.org/abs/2312.04142)\n",
     "\n",
     "[Implementation Link](https://github.com/blacksnail789521/timedrl)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Chronos: Learning the Language of Time Series \n",
-    "\n",
-    "12 Mar 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2403.07815)\n",
-    "\n",
-    "[Implementation Link](https://github.com/amazon-science/chronos-forecasting)\n",
     "\n",
     "---------------"
    ]
@@ -2638,29 +2714,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "## UniTS: Building a Unified Time Series Model \n",
-    "\n",
-    "29 Feb 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2403.00131)\n",
-    "\n",
-    "[Implementation Link](https://github.com/mims-harvard/UniTS)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "## TOTEM: TOkenized Time Series EMbeddings for General Time Series Analysis \n",
     "\n",
     "26 Feb 2024 \n",
@@ -2797,29 +2850,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Lag-Llama: Towards Foundation Models for Probabilistic Time Series Forecasting \n",
-    "\n",
-    "08 Feb 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2310.08278)\n",
-    "\n",
-    "[Implementation Link](https://github.com/time-series-foundation-models/lag-llama)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "## MultiResFormer: Transformer with Adaptive Multi-Resolution Modeling for General Time Series Forecasting \n",
     "\n",
     "08 Feb 2024 \n",
@@ -2936,29 +2966,6 @@
     "[Paper Link](https://arxiv.org/abs/2402.02399)\n",
     "\n",
     "[Implementation Link](https://github.com/master-plc/fredf)\n",
-    "\n",
-    "---------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Unified Training of Universal Time Series Forecasting Transformers \n",
-    "\n",
-    "04 Feb 2024 \n",
-    "\n",
-    "[Paper Link](https://arxiv.org/abs/2402.02592)\n",
-    "\n",
-    "[Implementation Link](https://github.com/SalesforceAIResearch/uni2ts)\n",
     "\n",
     "---------------"
    ]
