--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fevzi KILAS\n",
+    "## Fevzi KILAS (aka niexche)\n",
     "Data Scienist and Ai resercher"
    ]
   },
@@ -12,13 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://niexche.github.io\n",
+    "[niexche.github.io](https://niexche.github.io)\n",
     "\n",
-    "https://fevzikilas.github.io\n",
+    "[fevzikilas.tech](https://fevzikilas.github.io)\n",
     "\n",
-    "https://github.com/fevzikilas\n",
+    "[github.com/fevzikilas](https://github.com/fevzikilas)\n",
     "\n",
-    "https://huggingface.co/NIEXCHE "
+    "[huggingface.co/NIEXCHE](https://huggingface.co/NIEXCHE )"
    ]
   },
   {
@@ -38,21 +38,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
