Add detailed markdown content for time series forecasting models and evaluation metrics

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -32,6 +32,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Time Series Forecasting Models\n",
+    "\n",
+    "> Stochastic Models\n",
+    ">- Moving Average (MA) Model \n",
+    ">- Autoregressive (AR) Model \n",
+    ">- Autoregressive Moving Average (ARMA) Model \n",
+    ">- Autoregressive Integrated Moving Average (ARIMA) Model \n",
+    ">- Seasonal ARIMA (SARIMA) Model\n",
+    ">- Exponential Smoothing Models \n",
+    ">- Vector Autoregression (VAR) Model: \n",
+    ">- Vector Autoregression Moving-Average (VARMA) Model \n",
+    ">- Vector Autoregression Moving-Average with Exogenous Regressors (VARMAX) Model \n",
+    ">- Seasonal Decomposition of Time Series (STL) Model \n",
+    ">- Seasonal-Trend decomposition using LOESS (STL) Model \n",
+    ">- Seasonal-Trend decomposition using LOESS with ARIMA errors (STL-ARIMA) Model \n",
+    ">- Seasonal-Trend decomposition using LOESS with Exogenous Regressors (STL-X) Model \n",
+    ">- Seasonal-Trend decomposition using LOESS with ARIMA errors and Exogenous Regressors (STL-ARIMA-X) Model \n",
+    ">\n",
+    ">> ML Models\n",
+    ">- RNN and LSTM Networks \n",
+    ">- CNN Networks\n",
+    ">- Encoder-Decoder Networks\n",
+    ">- Attention Networks\n",
+    ">- Transformer Networks\n",
+    ">- WaveNet Networks\n",
+    ">- TCN Networks\n",
+    ">- DeepAR Networks\n",
+    ">- DeepState Networks\n",
+    ">- DeepFactor Networks\n",
+    ">\n",
+    ">> Evaluation Metrics\n",
+    ">- Mean Absolute Error (MAE)\n",
+    ">- Mean Squared Error (MSE)\n",
+    ">- Root Mean Squared Error (RMSE)\n",
+    ">- Mean Absolute Percentage Error (MAPE)\n",
+    ">- Symmetric Mean Absolute Percentage Error (SMAPE)\n",
+    ">- Mean Absolute Scaled Error (MASE)\n",
+    ">- Theil’s U Statistic\n",
+    ">- R2 Score\n",
+    ">- Adjusted R2 Score\n",
+    ">- Akaike Information Criterion (AIC)\n",
+    ">- Bayesian Information Criterion (BIC)\n",
+    ">- Mean Forecast Error (MFE)\n",
+    ">- Mean Absolute Deviation (MAD)\n",
+    ">- Tracking Signal (TS)\n",
+    ">- Forecast Bias\n",
+    ">- Forecast Accuracy\n",
+    ">- Forecast Precision\n",
+    ">- Forecast Recall\n",
+    ">- Forecast F1 Score\n",
+    ">- Forecast ROC AUC Score\n",
+    ">- Forecast PR AUC Score\n",
+    ">- Forecast Confusion Matrix\n",
+    ">- Forecast Classification Report\n",
+    ">- Forecast ROC Curve\n",
+    ">- Forecast PR Curve\n",
+    ">- Forecast Calibration Curve\n",
+    ">- Forecast Learning Curve\n",
+    ">- Forecast Residuals Plot\n",
+    ">- Forecast Residuals Density Plot\n",
+    ">- Forecast Residuals Distribution Plot\n",
+    ">- Forecast Residuals Q-Q Plot\n",
+    ">- Forecast Residuals Autocorrelation Plot\n",
+    ">- Forecast Residuals Partial Autocorrelation Plot\n",
+    ">- Forecast Residuals Lag Plot\n",
+    ">- Forecast Residuals Scatter Plot\n",
+    ">- Forecast Residuals vs. Time Plot\n",
+    ">- Forecast Residuals vs. Predicted Plot\n",
+    ">- Forecast Residuals vs. Actual Plot\n",
+    ">- Forecast Residuals vs. Forecast Plot\n",
+    ">- Forecast Residuals vs. Error Plot\n",
+    ">- Forecast Residuals vs. Squared Error Plot\n",
+    ">- Forecast Residuals vs. Absolute Error Plot\n",
+    ">- Forecast Residuals vs. Absolute Percentage Error Plot\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## PatchTST: A Time Series is Worth 64 Words: Long-term Forecasting with Transformers\n",
+    "\n",
+    "\n",
+    "17 Apr 2024 \n",
+    "\n",
+    "[Paper Link](https://arxiv.org/abs/2211.14730)\n",
+    "\n",
+    "[Implementation Link](https://huggingface.co/Salesforce/moirai-1.0-R-large)\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## TimesFM: A decoder-only foundation model for time-series forecasting \n",
     "\n",
